ui/apps/io.ox/mail/style.less
/* ... */
.preview-right {
    .leftside  { width: 320px; }
    .rightside { left:  320px; }

    @media(max-width: 900px) {
        .leftside  { width: 240px; }
        .rightside { left:  240px; }
    }

    .mail-item .list-item {
        .drag-title, .person {
            display: inline;
            overflow: hidden;
            text-overflow: ellipsis;
            max-width: 100%;
        }

        .drag-title {
            width: 100%;
        }

        &.unread .drag-title {
            width: calc(~"100% - 19px");
        }
        .from {
            max-height: 16px;
        }
    }
}

html.windows {
    .preview-right .mail-item .list-item .from {
        max-height: inherit;
        line-height: 17px;
        margin-top: -1px;
    }
    .detail-view-row.row-1 .from {
        margin-bottom: -1px;
    }
}

.io-ox-mail-window .vsplit .leftside .alert {
    position: relative;
    border-radius: 0;
    padding: 8px 30px 8px 16px;
    line-height: 24px;
    border: 0;
    border-bottom: 1px solid rgba(0, 0, 0, 0.10);
    height: 40px;
    a {
        color: @alert-info-text;
    }
    .fa-warning {
        margin-right: 16px;
    }
    .btn-close {
        position:absolute;
        right: 2px;
        top: 5px;
    }
}

.preview-bottom {
    .leftside {
        right: 0;
        bottom: auto;
        left: 0;
        width: auto !important;
        height: 45%;
        border-bottom: 1px solid #ccc;
        z-index: 2;
        overflow: visible;
    }

    .rightside {
        top: 45%;
        right: 0;
        left: 0 !important;
        z-index: 2;
        overflow: visible;
    }
    // outer layer overflow visible inner layer overflow auto. This is to show scrollbars when needed while keeping the dropdown from hiding under the mail list. see Bug(43449)
    .thread-view-control {
        overflow: auto;
    }
    // horizontal resizebar
    .list-view-control .resizebar {
        display: none;

        &.vertical {
            background: transparent;
            width: 100%;
            height: 5px;
            position: absolute;
            z-index: 10000;
            cursor: s-resize;
            cursor: ns-resize;
            cursor: row-resize;
            top: auto;
            right: auto;
            bottom: 0;
            display: block;
        }
    }
}

.preview-none {
    .leftside, .rightside {
        top:    0;
        right:  0;
        bottom: 0;
        left:   0;
    }

    .leftside {
        width: auto !important;
        z-index: 1;
    }

    .rightside {
        left: 0 !important;
        width: auto;
        display: none;
        z-index: 2;

        &.preview-visible { display: block; }
    }
}

.io-ox-mail-window .list-view-control.toolbar-top-visible .toolbar.top,
.io-ox-mail-window .list-view-control.toolbar-bottom-visible .toolbar.bottom {
    display: flex;
    // button label ellipsis
    .dropdown {
        // disable flexbox auto calculation
        min-width: 0;
        // pull right
        &.margin-auto {
            margin-left: auto;
        }
        & > a {
            display: flex;
            align-items: baseline;
            span { .ellipsis(); }
            padding-left: 16px;
        }
    }
    // toolbar elements won't shrink
    & > *:not('.dropdown') {
        min-width: 0;
        flex: 0 0 auto;
        padding-right: 8px;
    }
}

.list-item.small {
    padding-top: 7px;
    padding-bottom: 7px;

    .list-item-checkmark .fa.fa-checkmark { top: 8px; }
}

.list-item.small .list-item-content,
.thread-view .list-item.small {
    display: table;
    width: 100%;
    table-layout: fixed;
}

.mail-item {

    .list-item {
        padding-top: 11px;
        padding-bottom: 12px;

        .smartphone & {
            padding-top: 16px;
            padding-bottom: 15px;
            .list-item-checkmark { top: 9px; }
        }
    }

    .list-item-column {
        display: table-cell;
        vertical-align: middle;
        padding: 0;
        @icon-width: 24px;

        &.column-1 { width: @icon-width; text-align: center; }
        &.column-2 { width: @icon-width; text-align: center; }
        &.column-3 { width: @icon-width; text-align: center; }
        &.column-4 { width: 176px; padding-right: 8px; }
        &.column-5 { width: @icon-width; text-align: center; }
        &.column-6 { width: 90%; padding-right: 8px; .ellipsis; }
        &.column-7 { width: 136px; text-align: right; }
    }

    &.list-view .list-item {

        &.small {

            .priority { float: none; }

            .from span.person { font-weight: normal; }

            .subject {
                display: inline;
                margin-right: 16px;
            }

            .drag-title { opacity: 1; }

            .date {
                display: block;
                float: none;
                .ellipsis();
            }

            &.unread {
                .from span.person, .subject, .date { font-weight: bold; }
            }
        }

        &.unread {
            .date { opacity: 1; font-weight: bold; color: #000; }
        }
    }
}

// macos and ios specific styles
html.macos .preview-right, html.ios {
    .mail-item.list-view .list-item .from .person {
        font-weight: 700;
    }
    .mail-item.list-view .list-item.unread .from .person {
        font-weight: 800;
        color: #000;
    }
    .mail-item.list-view.has-focus .list-item.unread.selected .from .person {
        color: #fff;
    }
}
/* ... */

