Additional fix for Bug 68163 - letters truncated on Windows 10
-- added fix for subject and recipient class
-- refactored and used padding instead of line-height to ensure correct baseline

(cherry picked from commit 1c249ab8d1ea29a8c63b6a055273940a155f4d07)

--- a/ui/apps/io.ox/mail/style.less
+++ b/ui/apps/io.ox/mail/style.less
@@ -58,15 +58,32 @@
         }
     }
 }
-
+// fix for truncated letters on windows 10, see Bug 68163
 html.windows {
-    .preview-right .mail-item .list-item .from {
-        max-height: inherit;
-        line-height: 17px;
-        margin-top: -1px;
+    .preview-right .mail-item .list-item-row {
+        .from {
+            max-height: 18px;
+            padding-bottom: 2px;
+        }
+        .subject {
+            height: 18px;
+            margin-top: -2px;
+            padding-bottom: 2px;
+        }
+        .text-preview {
+            margin-top: -2px;
+        }
     }
-    .detail-view-row.row-1 .from {
-        margin-bottom: -1px;
+    .detail-view-row {
+        .from {
+            margin-bottom: -1px;
+        }
+        .recipients {
+            padding-bottom: 2px;
+        }
+        .inline-toolbar-container {
+            margin-top: -2px;
+        }
     }
 }
 
